# ShapeFromX_Uni_report

./: .gitmodules  README.md
DemoApp/ShapeFromX/: .gitignore
DemoApp/ShapeFromX/ShapeFromX/: .gitignore  CMakeLists.txt  DefaultCheckableBtn.qml  DefaultOptionBtn.qml  FileChooser.qml  README.md  ShapeFromX.qml  Utilities.cpp  Utilities.h  calibration.cpp  main.cpp  main.qml  qml.qrc
DemoApp/ShapeFromX/ShapeFromX/Manners/: CalibrationQomponent.qml  DefaultSurfaceSeriesShading.qml  FullImage.qml  MannerBase.qml  ShadingDataProxy.cpp  ShadingDataProxy.h  ShapeFromMCNN.qml  ShapeFromShading.qml  ShapeFromXBase.cpp  ShapeFromXBase.h  ShapeMannerHeaders.h  ShapingManners.cpp  ShapingManners.h
DemoApp/ShapeFromX/ShapeFromX/Manners/include/: ChessCalibrator.h  ShapeFromMonoCularNN.h  ShapeFromShading.h  ShapeFromTexture.h
DemoApp/ShapeFromX/ShapeFromX/Manners/src/: ChessCalibrator.cpp  ShapeFromMonoCularNN.cpp  ShapeFromShading.cpp  ShapeFromTexture.cpp
DemoApp/ShapeFromX/ShapeFromX/pyCodes/: client_test_code.py  local_face_Depth_to_camera.py  monocular_face_detection_disparity.py
Presentation/: ShapeFromX_v1.pptx  ShapeFromX_v2.pptx
